validator_derive_tests/tests/compile-fail/length/wrong_type.stderr
error[E0599]: no method named `validate_length` found for type `usize` in the current scope
 --> tests/compile-fail/length/wrong_type.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^ method not found in `usize`
  |
  = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
